--- a/.pylintrc
+++ b/.pylintrc
@@ -18,6 +18,14 @@ disable=raw-checker-failed,
 
 [FORMAT]
 
+max-line-length=80
+max-module-lines=100
+
+
 [REFACTORING]
 
+max-nested-blocks=2
+
 [DESIGN]
+
+max-statements=15
